Fixed Navbar
Attempting to fix strange space on left side of navbar

--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
   background-color: #1a5ef2;
   margin-top: 30px;
+  margin: 0;
   }
 #head {
   text-align: center;
